<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddRoutineActivity">

    <ImageButton
        android:id="@+id/imageButton_addRoutineAct_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@null"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_addRoutineAct_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="13dp"
        android:text="@string/days_routine"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/imageButton_addRoutineAct_back"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/textview_addRoutineAct_exerciseName"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="13dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/exercise_name"
        android:inputType="text"
        android:paddingStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_addRoutineAct_header" />

    <EditText
        android:id="@+id/textview_addRoutineAct_exerciseDetails"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="13dp"
        android:background="@drawable/edittext_background"
        android:gravity="start"
        android:hint="@string/exercise_details"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_addRoutineAct_exerciseName" />

    <LinearLayout
        android:id="@+id/layout_addRoutineAct_liner1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="15dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_addRoutineAct_exerciseDetails">

        <ImageView
            android:id="@+id/imageview_addRoutineAct_image01"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            android:src="@drawable/mainscren" />

        <ImageView
            android:id="@+id/imageview_addRoutineAct_image02"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="2dp"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            android:src="@drawable/mainscren" />

        <ImageView
            android:id="@+id/imageview_addRoutineAct_image03"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            android:src="@drawable/mainscren" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_addRoutineAct_liner2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_addRoutineAct_liner1">

        <Spinner
            android:id="@+id/spinner_addRoutineAct_TotalDays"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:padding="5dp"
            android:spinnerMode="dropdown" />

        <ImageButton
            android:id="@+id/imageButton_addRoutineAct_dropdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginEnd="20dp"
            android:background="@null"
            android:focusable="true"
            android:padding="13sp"
            android:src="@drawable/ic_dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edittext_addDietAct_dietChartName"

            />


        <Spinner
            android:id="@+id/spinner_addRoutineAct_bodyTypes"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:padding="5dp"
            android:spinnerMode="dropdown" />

        <ImageButton
            android:id="@+id/imageButton_addRoutineAct_dropdown2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:background="@null"
            android:focusable="true"
            android:padding="13sp"
            android:src="@drawable/ic_dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edittext_addDietAct_dietChartName"

            />
    </LinearLayout>

    <EditText
        android:id="@+id/editText_addRoutineAct_videoId"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="@drawable/edittext_background"
        android:hint="@string/video_id"
        android:inputType="text"
        android:paddingStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_addRoutineAct_liner2" />

    <LinearLayout
        android:id="@+id/layout_addRoutineAct_liner3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editText_addRoutineAct_videoId">

        <EditText
            android:id="@+id/editText_addRoutineAct_day"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/edittext_background"
            android:hint="@string/days"
            android:inputType="text"
            android:paddingStart="10dp" />

        <EditText
            android:id="@+id/editText_addRoutineAct_set"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/edittext_background"
            android:hint="@string/set"
            android:inputType="text"
            android:paddingStart="10dp" />

        <EditText
            android:id="@+id/editText_addRoutineAct_reps"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@drawable/edittext_background"
            android:hint="@string/reps"
            android:inputType="text"
            android:paddingStart="10dp" />
    </LinearLayout>

    <Button
        android:id="@+id/button_addRoutineAct_add"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:text="@string/add_exercise"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_addRoutineAct_liner3" />
</androidx.constraintlayout.widget.ConstraintLayout>